# RepoCapsule

./: .gitignore  AGENTS.md  LICENSE  LLMS.md  README.md  agents.md  chinapandaman__PyPDFForm__master__MIT.jsonl  chinapandaman__PyPDFForm__master__MIT.prompt.txt  chinapandaman__PyPDFForm__master__MIT_quality.csv  example_config.toml  karpathy__nanochat__master__MIT.jsonl  karpathy__nanochat__master__MIT.prompt.txt  karpathy__nanochat__master__MIT_quality.csv  llms.md  manual_test_github.toml  project_files.md  pyproject.toml
accel/: AGENTS.md  Cargo.toml  LLMS.md  README.md  pyproject.toml
accel/python/sievio_accel/: __init__.py  qc.py
accel/src/: lib.rs
docs/: README.md  TECHNICAL_MANUAL.md
docs/cookbook/: README.md
repocapsule/: __init__.py  chunk.py  convert.py  decode.py  evtxio.py  fs.py  githubio.py  interfaces.py  md_kql.py  pdfio.py  pipeline.py  qc.py  records.py  runner.py  sources_webpdf.py
repocapsule/src/repocapsule/: __init__.py  chunk.py  config.py  convert.py
scripts/: generate_configuration_md.py  manual_test_github.py  manual_test_github_toml.py  seed_dedup_db.py  test_sysmon_modular.py
src/: config.py  md_kql.py  runner.py
src/repocapsule/: __init__.py  chunk.py  config.py  convert.py  decode.py  export.py  fs.py  githubio.py  interfaces.py  log.py  md_kql.py  naming.py  pdfio.py  pipeline.py  qc.py  qc_controller.py  qc_utils.py  records.py  runner.py  safe_http.py  sinks.py  sources_webpdf.py
src/repocapsule/cli/: main.py  runner.py
src/sievio/: __init__.py
src/sinks/: sinks.py
src/sources/: fs.py  pdfio.py  sources_webpdf.py
tests/: test_builder_runtime_layering.py  test_callable_registries.py  test_chunk.py  test_chunk_semantics.py  test_cli_main.py  test_concurrency.py  test_config_builder_pipeline.py  test_convert.py  test_convert_integration.py  test_dataset_card.py  test_dataset_card_qc.py  test_decode.py  test_decode_fallback.py  test_dedup_store.py  test_export_tokens.py  test_factories_sources_config_overlays.py  test_hooks.py  test_licenses.py  test_log_and_naming.py  test_pipeline_middlewares.py  test_plugins_and_registries.py  test_qc_controller.py  test_qc_defaults.py  test_qc_parallel_inline.py  test_qc_pipeline.py  test_qc_post.py  test_qc_safety_modes.py  test_qc_simhash_optimization.py  test_qc_utils.py  test_qc_utils_accel_parity.py  test_qc_utils_accel_shim.py  test_records.py  test_runner_finalizers.py  test_safe_http.py  test_schema_validation.py  test_sharding.py  test_sqlite_source_security.py  test_sqlite_source_validation.py  test_stats_aggregate.py  test_webpage_pdf_source_delegation.py  (+1 more)
(+63 files in other folders)
