[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repocapsule"
version = "0.1.0"
description = "Repository → JSONL converter with robust decoding, structure-aware chunking, Markdown/KQL extraction, and GitHub helpers (stdlib-only)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { file = "LICENSE" }
keywords = ["jsonl", "github", "markdown", "kql", "ingestion", "chunking"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/your-org/repocapsule"
Issues = "https://github.com/your-org/repocapsule/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5.1"
]
qc = [
  "torch",
  "transformers",
  "tiktoken",
  "pyyaml"
]

[project.scripts]
repocapsule-qc = "repocapsule.qc:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["repocapsule*"]

# --- Optional tooling configs ---

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
ignore_missing_imports = true
